k8s/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ghost
  name: ghost
  namespace: ghost-dmz
spec:
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5.63
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2368
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 2368
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 50m
              memory: 120Mi
            limits:
              memory: 250Mi
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-data
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-app-pvc
