k8s/ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost-dmz
spec:
  ports:
    - port: 2368
      protocol: TCP
      targetPort: http
  selector:
    app: ghost
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-db
  namespace: ghost-dmz
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
