k8s/ghost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost-gateway
  namespace: ghost-dmz
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
    sectionName: koryalbert-net
  hostnames:
  - "www.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ghost
      port: 2368
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost-root-gateway
  namespace: ghost-dmz
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
    sectionName: koryalbert-net-root
  hostnames:
  - "koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ghost
      port: 2368
