k8s/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost-dmz
  annotations:
    kubernetes.io/ingress.className: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: koryalbert.net
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 2368
